<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_logo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_club_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_logo"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Club Name" />

        <TextView
            android:id="@+id/tv_club_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_club_name"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_logo"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:text="Club Name Detail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_toEndOf="@id/img_item_logo"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_detail"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/detail"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_share"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="16sp" />

        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>